# qglwidget-multithread-example

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp  opengl.h  opengl_quad.cpp  opengl_quad.h  opengl_thread.cpp  opengl_thread.h  opengl_widget.cpp  opengl_widget.h
